Add ability to calculate other hash algorithms (MD5, SHA-256, SHA-512)